src/main.scss
/* ... */
.main-content {
  // background-color: beige;
  display: flex;
  flex-direction: column;
}

.secondary-nav {
  width: 100%;
  display: flex;
  flex-direction: column-reverse;
  justify-content: space-evenly;
  align-items: center;
  row-gap: 0.5rem;
  &:first-child {
    margin: 2.3rem 0 4.2rem;
    @include vars.breakpoint(vars.$small-to-large) {
      transform: translateY(-50%);
      margin: 0 0 4.7rem;
    }
  }

  &:nth-last-child(3) {
    margin: 2.275rem 0 3.5rem;
    @include vars.breakpoint(vars.$small-to-large) {
      margin: 4.9rem 0 5.225rem;
    }
  }

  @include vars.breakpoint(vars.$small-to-large) {
    height: fit-content;
    flex-direction: row;
    justify-content: center;
    column-gap: 1rem;
  }

  &__btn {
    &--primary {
      @include vars.link-version(large);
      @include vars.breakpoint(vars.$small-to-large) {
        @include vars.primary(large);
      }
    }

    &--secondary {
      @include vars.secondary(large);
    }
  }
}

.reviews {
  // background-color: darkorange;
  margin: 0 0 6.5rem;
  display: flex;
  overflow-x: auto;
  column-gap: 3.5rem;
  height: fit-content;
  padding: 0 1.3rem 1rem;
  @include vars.breakpoint(vars.$small-to-large) {
    margin: 0 auto 6.5rem;
    max-width: 80%;
    min-width: fit-content;
    column-gap: 1.4rem;
  }

  &__review-item {
    // background-color: coral;
    flex-shrink: 0;
    display: grid;
    grid-template-areas:
      "pic txt"
      "pic info";
    grid-template-columns: 4.6rem auto;
    column-gap: 0.5rem;
    row-gap: 0.5rem;
    font-family: vars.$main-font;
    @include vars.breakpoint(vars.$small-to-large) {
      max-width: 32rem;
      grid-template-columns: 6.2rem auto;
      row-gap: 1rem;
    }
  }

  &__reviewer-image {
    grid-area: pic;
    width: 100%;
    padding-top: 0.2rem;
  }

  &__review-txt {
    grid-area: txt;
    font-size: 1.5rem;
    font-style: italic;
    max-width: 20rem;
    width: 66vw;
    min-width: 12rem;
    @include vars.breakpoint(vars.$small-to-large) {
      max-width: 26rem;
      text-align: left;
    }
  }

  &__reviewer-data {
    grid-area: info;
    width: 66vw;
    min-width: 12rem;
    font-size: 1.1rem;
    @include vars.breakpoint(vars.$small-to-large) {
      max-width: 18rem;
      text-align: left;
    }
  }
}

.challenges {
  height: fit-content;
  @include vars.breakpoint(vars.$large-screen-limit) {
    margin: auto;
  }

  &__headline {
    font-family: vars.$main-font;
    font-size: 2rem;
    font-weight: 400;
    text-align: center;
    margin-bottom: 2.75rem;
    @include vars.breakpoint(vars.$small-to-large) {
      font-size: 2.2rem;
      margin-bottom: 5rem;
    }
  }
}

.card-container {
  display: flex;
  overflow-x: scroll;
  column-gap: 2rem;
  padding-bottom: 0.625rem;
  padding-left: 10vw;
  @include vars.breakpoint(vars.$small-to-large) {
    padding: 0 0.2rem 0.625rem;
  }

  @include vars.breakpoint(vars.$large-screen-limit) {
    margin: auto;
  }
}

.card {
  position: relative;
  flex-shrink: 0;
  background-size: 100%;
  background-position: top;
  background-repeat: no-repeat;
  max-width: 22.7rem;
  width: 76vw;
  min-width: 17.9rem;
  min-height: 27.9rem;
  border-radius: 0.5rem;
  box-shadow: 0 0 0.6rem rgba($color: black, $alpha: 0.2);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  // z-index: 1;

  &__type {
    width: 2rem;
    position: absolute;
    top: 1rem;
    right: 1rem;
    opacity: 0.8;
  }
  &__image {
    width: 100%;
    border-radius: 0.5rem 0.5rem 0 0;
  }

  &__title {
    margin: 0.75rem 0 0 1rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    font-family: vars.$main-font;
    font-size: 1.8rem;
    font-weight: 400;
  }

  &__room-participants {
    font-family: vars.$main-font;
    font-weight: 400;
    font-size: 0.9rem;
  }

  &__description {
    margin: 1.1rem 1rem 1.8rem;
    font-family: vars.$main-font;
    font-size: 1.1rem;
    font-weight: 400;
    line-height: 1.25rem;
  }

  &__button {
    @include vars.primary(medium);
    align-self: flex-end;
    margin: 0 1rem 1rem 0;
  }
}

.rating-container {
  margin: 0 1rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.rating {
  letter-spacing: 0.5rem;
}

.information {
  // background-color: greenyellow;
  width: 100%;

  &__story {
    width: 100%;
    height: fit-content;
    background-color: vars.$color-dark-blue;
    padding: 6rem 1.3rem;
    text-align: center;
  }

  &__story-text {
    color: vars.$color-white;
    font-family: vars.$main-font;
    font-size: 1.7rem;
    text-align: center;
    letter-spacing: 1%;
    padding-bottom: 3rem;
    max-width: 38rem;
    margin: auto;
    @include vars.breakpoint(vars.$small-to-large) {
    }
  }

  &__btn--primary-on-dark {
    @include vars.primary-on-dark(large);
    margin-top: 0.5rem;
    @include vars.breakpoint(vars.$small-to-large) {
      margin-top: -0.5rem;
      margin-bottom: 3rem;
    }
  }
}

.booking {
  // background-color: lightskyblue;
  width: 100%;
  display: flex;
  flex-direction: column;
  font-family: vars.$main-font;
  @include vars.breakpoint(vars.$small-to-large) {
    flex-direction: row;
    &:last-child {
      flex-direction: row-reverse;
      justify-content: start;
    }
  }

  &__info-image {
    width: 100%;
    @include vars.breakpoint(vars.$small-to-large) {
      flex: 50%;
    }
  }

  &__info-container {
    padding: 1.9rem 1.3rem 4rem;
    display: flex;
    flex-direction: column;
    @include vars.breakpoint(vars.$small-to-large) {
      flex: 50%;
      padding: 2rem 7rem 4rem;
    }
  }

  &__header {
    font-size: 2rem;
    padding-bottom: 1.7rem;
  }

  &__info-txt {
    font-size: 1.5rem;
    padding-bottom: 3.1rem;
  }

  &__btn {
    @include vars.primary(large);
  }
}
/* ... */

